--- a/netty-quic/build.gradle
+++ b/netty-quic/build.gradle
@@ -1,7 +1,10 @@
 dependencies {
+  compile group: 'org.slf4j', name: 'slf4j-api', version: "${slf4j_version}"
   compile "org.bouncycastle:bcpkix-jdk18on:1.72"
   compile group: 'io.netty', name: 'netty-all', version: netty_version
   compile group:'io.netty.incubator',name:'netty-incubator-codec-native-quic',version:netty_quic_version,classifier:netty_quic_platform
-  testCompile group: 'org.slf4j', name: 'slf4j-simple', version: slf4j_version
+  compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.18.0'
+  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.18.0'
+  compile "org.apache.logging.log4j:log4j-slf4j-impl:2.18.0"
 }
 
