add local gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ junit_version=5.7.0
 guava_version=20.0
 mockito_version=3.9.0
 netty_version=4.1.92.Final
-netty_quic_version =0.0.43.Final
+netty_quic_version = 0.0.46.Final-SNAPSHOT
 #netty_quic_platform = linux-x86_64
 netty_quic_platform = osx-x86_64
